feat: add all basic auth and user functionality
