# app/models/user.go
@@ -1,11 +1,18 @@
 package models
 
-import "github.com/google/uuid"
+import (
+	"time"
+
+	"github.com/google/uuid"
+)
 
 type User struct {
-	ID       uuid.UUID `json:"id,omitempty"`
-	Email    string    `json:"email,omitempty"`
-	Password string    `json:"password,omitempty"`
-	Username string    `json:"username,omitempty"`
-	Verified bool      `json:"verified,omitempty"`
+	ID        uuid.UUID `json:"id,omitempty"`
+	Email     string    `json:"email,omitempty"`
+	Password  string    `json:"-"`
+	Username  string    `json:"username,omitempty"`
+	IsAdmin   bool      `json:"is_admin,omitempty"`
+	Verified  bool      `json:"verified,omitempty"`
+	CreatedAt time.Time `json:"created_at,omitempty"`
+	UpdatedAt time.Time `json:"updated_at,omitempty"`
 }
