# docs/swagger.yaml
@@ -1,21 +1,264 @@
 definitions:
+  controllers.ChangePasswordRequest:
+    properties:
+      new_password:
+        type: string
+      old_password:
+        type: string
+    type: object
+  controllers.LoginRequest:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+    type: object
+  controllers.RegisterRequest:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+      username:
+        type: string
+    type: object
+  controllers.Session:
+    properties:
+      token:
+        type: string
+    type: object
+  controllers.UserUpdateRequest:
+    properties:
+      email:
+        type: string
+      username:
+        type: string
+    type: object
   models.User:
     properties:
+      created_at:
+        type: string
       email:
         type: string
       id:
         type: string
-      password:
+      is_admin:
+        type: boolean
+      updated_at:
         type: string
       username:
         type: string
       verified:
         type: boolean
     type: object
+  utils.APIError:
+    properties:
+      error:
+        type: boolean
+      msg:
+        type: string
+    type: object
 info:
-  contact: {}
+  contact:
+    email: gatanasovgeorgiev@gmail.com
+    name: Georgi Georgiev
+  description: This is the API for Watermelon
+  title: Watermelon API
+  version: "1.0"
 paths:
-  /users:
+  /api/login:
+    post:
+      consumes:
+      - application/json
+      description: Create a new session for the user
+      parameters:
+      - description: Login data
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/controllers.LoginRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/controllers.Session'
+        "400":
+          description: Invalid request
+          schema:
+            $ref: '#/definitions/utils.APIError'
+        "401":
+          description: Invalid credentials
+          schema:
+            $ref: '#/definitions/utils.APIError'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/utils.APIError'
+      tags:
+      - Auth
+  /api/logout:
+    delete:
+      consumes:
+      - application/json
+      description: Invalidate the user's session
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "401":
+          description: Invalid credentials
+          schema:
+            $ref: '#/definitions/utils.APIError'
+      security:
+      - Bearer: []
+      tags:
+      - Auth
+  /api/me:
+    delete:
+      consumes:
+      - application/json
+      description: Delete the authenticated user
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/utils.APIError'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/utils.APIError'
+      security:
+      - Bearer: []
+      tags:
+      - User
+    get:
+      consumes:
+      - application/json
+      description: Get the authenticated user
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.User'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/utils.APIError'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/utils.APIError'
+      security:
+      - Bearer: []
+      tags:
+      - User
+    put:
+      consumes:
+      - application/json
+      description: Update the authenticated user
+      parameters:
+      - description: User data
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/controllers.UserUpdateRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.User'
+        "400":
+          description: Invalid request
+          schema:
+            $ref: '#/definitions/utils.APIError'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/utils.APIError'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/utils.APIError'
+      security:
+      - Bearer: []
+      tags:
+      - User
+  /api/me/password:
+    put:
+      consumes:
+      - application/json
+      description: Changes the authenticated user's password
+      parameters:
+      - description: Password change data
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/controllers.ChangePasswordRequest'
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Invalid request
+          schema:
+            $ref: '#/definitions/utils.APIError'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/utils.APIError'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/utils.APIError'
+      security:
+      - Bearer: []
+      tags:
+      - User
+  /api/register:
+    post:
+      consumes:
+      - application/json
+      description: Create a new user
+      parameters:
+      - description: Registration data
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/controllers.RegisterRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/controllers.Session'
+        "400":
+          description: Invalid request
+          schema:
+            $ref: '#/definitions/utils.APIError'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/utils.APIError'
+      tags:
+      - Auth
+  /api/users:
     get:
       consumes:
       - application/json
@@ -29,10 +272,50 @@ paths:
             items:
               $ref: '#/definitions/models.User'
             type: array
-      summary: get all existing users
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/utils.APIError'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/utils.APIError'
+      security:
+      - Bearer: []
       tags:
       - User
-  /users/{id}:
+  /api/users/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete user by given ID
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Invalid request
+          schema:
+            $ref: '#/definitions/utils.APIError'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/utils.APIError'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/utils.APIError'
+      security:
+      - Bearer: []
+      tags:
+      - User
     get:
       consumes:
       - application/json
@@ -50,7 +333,65 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/models.User'
-      summary: get user by given ID
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/utils.APIError'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/utils.APIError'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/utils.APIError'
+      security:
+      - Bearer: []
       tags:
       - User
+    put:
+      consumes:
+      - application/json
+      description: Update user by given ID
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: User data
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/controllers.UserUpdateRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.User'
+        "400":
+          description: Invalid request
+          schema:
+            $ref: '#/definitions/utils.APIError'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/utils.APIError'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/utils.APIError'
+      security:
+      - Bearer: []
+      tags:
+      - User
+securityDefinitions:
+  Bearer:
+    description: Type "Bearer" followed by a space and JWT token
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
