# internal/routes/private_routes.go
@@ -1,13 +1,26 @@
 package routes
 
-import "github.com/gofiber/fiber/v2"
+import (
+	"github.com/gofiber/fiber/v2"
+	"github.com/thxgg/watermelon/app/controllers"
+	"github.com/thxgg/watermelon/internal/middleware"
+)
 
-func PrivateRoutes(a *fiber.App) {
-	// // Auth
-	// a.Delete("/logout", controllers.Logout)
+func PrivateRoutes(a fiber.Router) {
+	// Auth
+	a.Delete("/logout", middleware.Protected(), controllers.Logout)
 
-	// // Users
-	// userGroup := a.Group("/users")
-	// userGroup.Put("/:id", controllers.UpdateUser)
-	// userGroup.Delete("/:id", controllers.DeleteUser)
+	// Me
+	meGroup := a.Group("/me", middleware.Protected())
+	meGroup.Get("/", controllers.GetSelf)
+	meGroup.Put("/", controllers.UpdateSelf)
+	meGroup.Put("/password", controllers.ChangePassword)
+	meGroup.Delete("/", controllers.DeleteSelf)
+
+	// Users
+	userGroup := a.Group("/users", middleware.Protected())
+	userGroup.Get("/", controllers.GetUsers)
+	userGroup.Get("/:id", controllers.GetUser)
+	userGroup.Put("/:id", controllers.UpdateUser)
+	userGroup.Delete("/:id", controllers.DeleteUser)
 }
